--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,8 +102,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  padding-top: 3px;
+  padding-bottom: 3px;
   flex-wrap: nowrap;
   /* background-color: rgba(1, 82, 60, 0.98); */
   border-bottom-left-radius: 10px;
@@ -552,8 +552,8 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
   float: left;
   margin-right: 1em;
   margin-top: 1rem;
-  width: 30vw;
-  height: 50vh;
+  width: 10vw;
+  height: 10vh;
   max-width: 100%;
   /* height: auto; */
   border-radius: 10px;
