--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ h5 {
 p {
   text-align: start;
   font-family: 'ClearSans', sans-serif;
-  padding: 1vw 1vh;
+  padding: 1px 5px;
   letter-spacing: 1px;
   line-height: 120%;
 }
@@ -541,7 +541,7 @@ div.bouton_commande:nth-child(n) > a:nth-child(1) {
 }
 
 .justify_article {
-  padding: 1vh 1vw;
+  padding: 1px 5px;
   text-decoration: none;
   /* column-count: 3; */
   text-align: justify;
