--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1313,7 +1313,7 @@ ul li div.smenu a {
 
 
 @media all and (max-width: 1024px) {
-  span,
+  span, .search,
   p,
   a,
   .bouton_commande,
@@ -1356,6 +1356,14 @@ ul li div.smenu a {
 
   #menu-bar {
     width: auto;
+  }
+
+  .search {
+    position: absolute;
+    top: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   .photo {
