--- a/public/css/style.css
+++ b/public/css/style.css
@@ -864,6 +864,8 @@ a.hidden-btn {
 }
 
 table {
+  margin-top: 10px;
+  margin-bottom: 5px;
   border-collapse: collapse;
   border: 2px solid rgb(200, 200, 200);
   letter-spacing: 1px;
