add flex align-items

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -985,6 +985,7 @@ main div.back-page {
 .back-page a {
   display: flex;
   justify-content: flex-end;
+  align-items: baseline;
   background-color: cornflowerblue;
   text-decoration: none;
   color: cornsilk;
