--- a/public/css/style.css
+++ b/public/css/style.css
@@ -383,6 +383,7 @@ ul .sous-menu {
   width: 100%;
 }
 
+/****** Photo de profil ******/
 .photo {
   display: flex;
   justify-content: flex-end;
@@ -397,6 +398,68 @@ ul .sous-menu {
   max-height: 65px;
   width: auto;
   border-radius: 10px;
+}
+
+.profile-pic {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.3s ease-out;
+}
+
+.profile-pic:hover {
+  transform: scale(1.1); /* Petit zoom au survol */
+}
+
+/* Fond en arrière-plan */
+.fullscreen-bg {
+  z-index: 3;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(10px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-out, visibility 0.5s ease-out;
+}
+
+/* Image en plein écran */
+.fullscreen-img {
+  width: 80vw;
+  height: auto;
+  max-width: 600px;
+  border-radius: 20px;
+  opacity: 0;
+  transform: scale(0.8) rotateX(15deg);
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
+/* Quand on active le plein écran */
+.fullscreen-bg.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.fullscreen-img.active {
+  opacity: 1;
+  transform: scale(1) rotateX(0);
+}
+
+/* 🔹 Bouton pour fermer */
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
 }
 
 /****** Search button *******/
